--- a/src/DevBoard/CoreBundle/Resources/config/routing.yml
+++ b/src/DevBoard/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+dev_board_core_project:
+    resource: "@DevBoardCoreBundle/Resources/config/routing/project.yml"
+    prefix:   /project
+
 dev_board_core_homepage:
     path:     /hello/{name}
     defaults: { _controller: DevBoardCoreBundle:Default:index }
