--- a/src/DevBoard/GithubBundle/Resources/config/services.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services.yml
@@ -57,3 +57,32 @@ services:
     arguments:
       - @github.event.push.branch.handler
       - @github.event.push.tag.handler
+
+  github.sync.branches.handler:
+    class: DevBoard\Github\Sync\Branches\SyncBranchesHandler
+    arguments:
+      - @nulldev.user.service.current
+      - @null_dev_github_api.branch.service
+      - @github.remote.fetch.branch.handler
+
+
+  github.remote.fetch.branch.data.branch.factory:
+    class: DevBoard\GithubRemote\Fetch\Branch\Data\BranchFactory
+  github.remote.fetch.branch.data.commit.factory:
+    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitFactory
+  github.remote.fetch.branch.data.commit_author.factory:
+    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitAuthorFactory
+  github.remote.fetch.branch.data.commit_committer.factory:
+    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitCommitterFactory
+
+  github.remote.fetch.branch.handler:
+    class: DevBoard\GithubRemote\Fetch\Branch\BranchHandler
+    arguments:
+      - @github.remote.fetch.branch.data.branch.factory
+      - @github.remote.fetch.branch.data.commit.factory
+      - @github.remote.fetch.branch.data.commit_author.factory
+      - @github.remote.fetch.branch.data.commit_committer.factory
+      - @github.branch.facade
+      - @github.commit.facade
+      - @github.user.facade
+      - @doctrine.orm.entity_manager
