--- a/src/NullDev/GithubApiBundle/Resources/config/services.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services.yml
@@ -14,6 +14,38 @@ services:
         arguments:
           - @null_dev_github_api.client.authenticated.factory.token
           - @null_dev_github_api.repo.data.factory
+          
+          
+    null_dev_github_api.commit.data.factory:
+        class: NullDev\GithubApi\Commit\GithubCommitDataFactory
+        arguments:
+          - @null_dev_github_api.user.data.factory
+
+    null_dev_github_api.commit.service:
+        class: NullDev\GithubApi\Commit\RemoteGithubCommitService
+        arguments:
+          - @null_dev_github_api.client.authenticated.factory.token
+          - @null_dev_github_api.commit.data.factory
+
+
+
+
+
+    null_dev_github_api.branch.data.factory:
+        class: NullDev\GithubApi\Branch\GithubBranchDataFactory
+
+    null_dev_github_api.branch.service:
+        class: NullDev\GithubApi\Branch\RemoteGithubBranchService
+        arguments:
+          - @null_dev_github_api.client.authenticated.factory.token
+          - @null_dev_github_api.branch.data.factory
+
+
+
+
+
+
+
 
 
     null_dev_github_api.user.data.factory:
