--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,6 +34,7 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/project/, role: ROLE_USER }
+        - { path: ^/dashboard/, role: ROLE_USER }
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
