Moved dashboard into seperate controller + basic ajax refresh

--- a/src/DevBoard/CoreBundle/Resources/config/routing.yml
+++ b/src/DevBoard/CoreBundle/Resources/config/routing.yml
@@ -4,4 +4,7 @@ dev_board_core_project:
 
 dashboard:
     path:     /dashboard/
-    defaults: { _controller: DevBoardCoreBundle:Default:index }
+    defaults: { _controller: DevBoardCoreBundle:Dashboard:index }
+dashboard_livebranches:
+    path:     /dashboard/livebranches
+    defaults: { _controller: DevBoardCoreBundle:Dashboard:livebranches }
