--- a/src/DevBoard/GithubBundle/Resources/config/services.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services.yml
@@ -2,7 +2,9 @@ imports:
   - { resource: services/repo.yml }
   - { resource: services/branch.yml }
   - { resource: services/commit.yml }
+  - { resource: services/commitstatus.yml }
   - { resource: services/user.yml }
+  - { resource: services/externalservices.yml }
   - { resource: services/webhook.yml }
 services:
 
@@ -11,16 +13,44 @@ services:
     arguments:
       - @github.event.payload.factory
       - @github.event.push.handler
+      - @github.event.status.handler
+
+
+  github.event.status.handler:
+    class: DevBoard\GithubEvent\Status\StatusHandler
+    arguments:
+      - @github.event.status.data.repo.factory
+      - @github.event.status.data.commit.factory
+      - @github.event.status.data.externalservices.factory
+      - @github.event.status.data.commitstatus.factory
+      - @github.repo.facade
+      - @github.commit.facade
+      - @github.externalservices.facade
+      - @github.commitstatus.facade
+      - @doctrine.orm.entity_manager
+
+
+  github.event.status.data.repo.factory:
+    class: DevBoard\GithubEvent\Status\Data\RepoFactory
+  github.event.status.data.commit.factory:
+    class: DevBoard\GithubEvent\Status\Data\CommitFactory
+  github.event.status.data.externalservices.factory:
+    class: DevBoard\GithubEvent\Status\Data\ExternalServiceFactory
+  github.event.status.data.commitstatus.factory:
+    class: DevBoard\GithubEvent\Status\Data\CommitStatusFactory
+
+
+
+  github.event.payload.factory:
+    class: DevBoard\GithubEvent\Payload\PayloadFactory
+
+
 
   github.event.push.handler:
     class: DevBoard\GithubEvent\Push\PushHandler
     arguments:
       - @github.event.push.branch.handler
       - @github.event.push.tag.handler
-
-  github.event.payload.factory:
-    class: DevBoard\GithubEvent\Payload\PayloadFactory
-
 
   github.event.push.branch.data.repo.factory:
     class: DevBoard\GithubEvent\Push\Branch\Data\RepoFactory
