--- a/src/DevBoard/GithubBundle/Resources/config/services.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services.yml
@@ -27,6 +27,7 @@ services:
       - @github.commit.facade
       - @github.externalservices.facade
       - @github.commitstatus.facade
+      - @github.commit.state.calculator
       - @doctrine.orm.entity_manager
 
 
