Adding missing pieces

--- a/src/DevBoard/Github/Commit/Resources/config/doctrine/GithubCommit.orm.yml
+++ b/src/DevBoard/Github/Commit/Resources/config/doctrine/GithubCommit.orm.yml
@@ -53,6 +53,10 @@ DevBoard\Github\Commit\Entity\GithubCommit:
       joinColumn:
         name: committerId
         referencedColumnName: id
+  oneToMany:
+    commitStatuses:
+      targetEntity: DevBoard\Github\CommitStatus\Entity\GithubCommitStatus
+      mappedBy: githubCommit
   lifecycleCallbacks:
     prePersist: ['doCreatedValue']
     preUpdate: ['doUpdatedValue']
