--- a/circle.yml
+++ b/circle.yml
@@ -42,10 +42,14 @@ dependencies:
     - "bin"
 test:
   override:
-    - ./bin/phpunit
+    - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    - php -d 'xdebug.max_nesting_level=500' bin/phpunit
+    - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    - ./bin/coveralls
     - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
     - ./bin/phpspec run --no-interaction
     - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    - ./bin/coveralls
     - ./bin/behat --strict
     - ./bin/phpmd src/ text phpmd.xml
     - ./bin/phpmd app/ text phpmd.xml
@@ -53,6 +57,5 @@ test:
     - ./bin/phpcs --standard=phpcs.xml app/ -n
     - ./bin/php-cs-fixer fix spec/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
     - ./bin/php-cs-fixer fix src/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
-    - ./bin/coveralls
     - ./bin/test-reporter
 
