feature #152 GithubTag support

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,6 +108,12 @@ doctrine:
                         dir: %kernel.root_dir%/../src/DevBoard/Github/CommitStatus/Resources/config/doctrine
                         prefix: DevBoard\Github\CommitStatus\Entity
                         alias: GhCommitStatus
+                    DevBoardGithubTag:
+                        type: yml
+                        is_bundle: false
+                        dir: %kernel.root_dir%/../src/DevBoard/Github/Tag/Resources/config/doctrine
+                        prefix: DevBoard\Github\Tag\Entity
+                        alias: GhTag
                     DevBoardGithubUser:
                         type: yml
                         is_bundle: false
