Fixed Tages -> Tags, error when copying branches code over

--- a/src/DevBoard/Github/Tag/Resources/config/doctrine/GithubTag.orm.yml
+++ b/src/DevBoard/Github/Tag/Resources/config/doctrine/GithubTag.orm.yml
@@ -1,6 +1,6 @@
 DevBoard\Github\Tag\Entity\GithubTag:
   type: entity
-  table: GithubTages
+  table: GithubTags
   repositoryClass: DevBoard\Github\Tag\Entity\GithubTagRepository
   id:
     id:
