--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,12 @@ before_script:
   - java -jar selenium.jar > selenium.log 2>&1 &
   - sleep 4
 
+  - cp etc/travis-ci/.coveralls.yml .coveralls.yml
   - cp etc/travis-ci/app/config/parameters.yml app/config/parameters.yml
   - cp etc/travis-ci/web/app_test.php web/app_test.php
   - cp etc/travis-ci/web/.htaccess web/.htaccess
   - cp etc/ci/behat.yml behat.yml
+  - cp etc/ci/phpspec.yml phpspec.yml
 
   - composer install
   - php app/console doctrine:database:create --env=dev
@@ -54,15 +56,18 @@ before_script:
   - php app/console assetic:dump --env=prod --no-debug
 
 script:
-  #- sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-  - ./bin/phpunit
-  #- sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-  - ./bin/behat
+  - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+  - php -d 'xdebug.max_nesting_level=500' bin/phpunit
+  - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+  - php bin/coveralls -v
+  - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
   - ./bin/phpspec run --no-interaction
+  - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+  - php bin/coveralls -v
+  - ./bin/behat
   - ./bin/phpmd src/ text phpmd.xml
   - ./bin/phpmd app/ text phpmd.xml
   - ./bin/phpcs --standard=phpcs.xml src/ -n
   - ./bin/phpcs --standard=phpcs.xml app/ -n
   - ./bin/php-cs-fixer fix spec/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
   - ./bin/php-cs-fixer fix src/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
-#  - ./bin/coveralls
