--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ dependencies:
     - cp etc/ci/web/app_test.php web/app_test.php
     - cp etc/ci/web/.htaccess web/.htaccess
     - cp etc/ci/behat.yml behat.yml
-    - cp etc/ci/phpspec.yml phpspec.yml
+    #- cp etc/ci/phpspec.yml phpspec.yml
   post:
     - sudo setfacl -R -m u:www-data:rwx -m u:`whoami`:rwx  app/cache app/logs
     - sudo setfacl -dR -m u:www-data:rwx -m u:`whoami`:rwx app/cache app/logs
@@ -42,14 +42,14 @@ dependencies:
     - "bin"
 test:
   override:
-    - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    #- sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
     - php -d 'xdebug.max_nesting_level=500' bin/phpunit
-    - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-    - ./bin/coveralls
-    - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    #- sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    #- ./bin/coveralls
+    #- sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
     - ./bin/phpspec run --no-interaction
-    - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-    - ./bin/coveralls
+    #- sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+    #- ./bin/coveralls
     - ./bin/behat --strict
     - ./bin/phpmd src/ text phpmd.xml
     - ./bin/phpmd app/ text phpmd.xml
@@ -57,5 +57,5 @@ test:
     - ./bin/phpcs --standard=phpcs.xml app/ -n
     - ./bin/php-cs-fixer fix spec/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
     - ./bin/php-cs-fixer fix src/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
-    - ./bin/test-reporter
+    #- ./bin/test-reporter
 
