--- a/src/DevBoard/GithubBundle/Resources/config/services.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services.yml
@@ -7,139 +7,7 @@ imports:
   - { resource: services/user.yml }
   - { resource: services/externalservices.yml }
   - { resource: services/webhook.yml }
+  - { resource: services/event/main.yml }
+  - { resource: services/remote.yml }
+  - { resource: services/sync.yml }
 services:
-
-  github.event.handler:
-    class: DevBoard\GithubEvent\EventHandler
-    arguments:
-      - @github.event.payload.factory
-      - @github.event.push.handler
-      - @github.event.status.handler
-
-
-  github.event.status.handler:
-    class: DevBoard\GithubEvent\Status\StatusHandler
-    arguments:
-      - @github.event.status.data.repo.factory
-      - @github.event.status.data.commit.factory
-      - @github.event.status.data.externalservices.factory
-      - @github.event.status.data.commitstatus.factory
-      - @github.repo.facade
-      - @github.commit.facade
-      - @github.externalservices.facade
-      - @github.commitstatus.facade
-      - @github.commit.state.calculator
-      - @doctrine.orm.entity_manager
-
-
-  github.event.status.data.repo.factory:
-    class: DevBoard\GithubEvent\Status\Data\RepoFactory
-  github.event.status.data.commit.factory:
-    class: DevBoard\GithubEvent\Status\Data\CommitFactory
-  github.event.status.data.externalservices.factory:
-    class: DevBoard\GithubEvent\Status\Data\ExternalServiceFactory
-  github.event.status.data.commitstatus.factory:
-    class: DevBoard\GithubEvent\Status\Data\CommitStatusFactory
-
-
-
-  github.event.payload.factory:
-    class: DevBoard\GithubEvent\Payload\PayloadFactory
-
-
-
-  github.event.push.handler:
-    class: DevBoard\GithubEvent\Push\PushHandler
-    arguments:
-      - @github.event.push.branch.handler
-      - @github.event.push.tag.handler
-
-  github.event.push.branch.data.repo.factory:
-    class: DevBoard\GithubEvent\Push\Branch\Data\RepoFactory
-  github.event.push.branch.data.branch.factory:
-    class: DevBoard\GithubEvent\Push\Branch\Data\BranchFactory
-  github.event.push.branch.data.commit.factory:
-    class: DevBoard\GithubEvent\Push\Branch\Data\CommitFactory
-  github.event.push.branch.data.commit_author.factory:
-    class: DevBoard\GithubEvent\Push\Branch\Data\CommitAuthorFactory
-  github.event.push.branch.data.commit_committer.factory:
-    class: DevBoard\GithubEvent\Push\Branch\Data\CommitCommitterFactory
-
-
-
-  github.event.push.branch.handler:
-    class: DevBoard\GithubEvent\Push\Branch\BranchHandler
-    arguments:
-      - @github.event.push.branch.data.repo.factory
-      - @github.event.push.branch.data.branch.factory
-      - @github.event.push.branch.data.commit.factory
-      - @github.event.push.branch.data.commit_author.factory
-      - @github.event.push.branch.data.commit_committer.factory
-      - @github.repo.facade
-      - @github.branch.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
-
-
-  github.event.push.tag.data.repo.factory:
-    class: DevBoard\GithubEvent\Push\Tag\Data\RepoFactory
-  github.event.push.tag.data.tag.factory:
-    class: DevBoard\GithubEvent\Push\Tag\Data\TagFactory
-  github.event.push.tag.data.commit.factory:
-    class: DevBoard\GithubEvent\Push\Tag\Data\CommitFactory
-  github.event.push.tag.data.commit_author.factory:
-    class: DevBoard\GithubEvent\Push\Tag\Data\CommitAuthorFactory
-  github.event.push.tag.data.commit_committer.factory:
-    class: DevBoard\GithubEvent\Push\Tag\Data\CommitCommitterFactory
-
-
-
-  github.event.push.tag.handler:
-    class: DevBoard\GithubEvent\Push\Tag\TagHandler
-    arguments:
-      - @github.event.push.tag.data.repo.factory
-      - @github.event.push.tag.data.tag.factory
-      - @github.event.push.tag.data.commit.factory
-      - @github.event.push.tag.data.commit_author.factory
-      - @github.event.push.tag.data.commit_committer.factory
-      - @github.repo.facade
-      - @github.tag.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
-
-  github.event.push.handler:
-    class: DevBoard\GithubEvent\Push\PushHandler
-    arguments:
-      - @github.event.push.branch.handler
-      - @github.event.push.tag.handler
-
-  github.sync.branches.handler:
-    class: DevBoard\Github\Sync\Branches\SyncBranchesHandler
-    arguments:
-      - @nulldev.user.service.current
-      - @null_dev_github_api.branch.service
-      - @github.remote.fetch.branch.handler
-
-
-  github.remote.fetch.branch.data.branch.factory:
-    class: DevBoard\GithubRemote\Fetch\Branch\Data\BranchFactory
-  github.remote.fetch.branch.data.commit.factory:
-    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitFactory
-  github.remote.fetch.branch.data.commit_author.factory:
-    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitAuthorFactory
-  github.remote.fetch.branch.data.commit_committer.factory:
-    class: DevBoard\GithubRemote\Fetch\Branch\Data\CommitCommitterFactory
-
-  github.remote.fetch.branch.handler:
-    class: DevBoard\GithubRemote\Fetch\Branch\BranchHandler
-    arguments:
-      - @github.remote.fetch.branch.data.branch.factory
-      - @github.remote.fetch.branch.data.commit.factory
-      - @github.remote.fetch.branch.data.commit_author.factory
-      - @github.remote.fetch.branch.data.commit_committer.factory
-      - @github.branch.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
