--- a/etc/ci/phpspec.yml
+++ b/etc/ci/phpspec.yml
@@ -1,7 +1,10 @@
 formatter.name: progress
 extensions:
-    - Coduo\PhpSpec\DataProvider\DataProviderExtension
-    - PhpSpec\Extension\CodeCoverageExtension
+  - Coduo\PhpSpec\DataProvider\DataProviderExtension
+  - Cjm\PhpSpec\Extension\TypeHintedMethodsExtension
+  - RMiller\ExemplifyExtension\ExemplifyExtension
+  - RMiller\BehatSpec\PhpSpecExtension
+  - PhpSpec\Extension\CodeCoverageExtension
 code_coverage:
   format:
     - html
