--- a/src/DevBoard/GithubBundle/Resources/config/services/event/status.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/event/status.yml
@@ -3,16 +3,16 @@ services:
   github.event.status.handler:
     class: DevBoard\GithubEvent\Status\StatusHandler
     arguments:
-      - @github.event.status.data.repo.factory
-      - @github.event.status.data.commit.factory
-      - @github.event.status.data.externalservices.factory
-      - @github.event.status.data.commitstatus.factory
-      - @github.repo.facade
-      - @github.commit.facade
-      - @github.externalservices.facade
-      - @github.commitstatus.facade
-      - @github.commit.state.calculator
-      - @doctrine.orm.entity_manager
+      - "@github.event.status.data.repo.factory"
+      - "@github.event.status.data.commit.factory"
+      - "@github.event.status.data.externalservices.factory"
+      - "@github.event.status.data.commitstatus.factory"
+      - "@github.repo.facade"
+      - "@github.commit.facade"
+      - "@github.externalservices.facade"
+      - "@github.commitstatus.facade"
+      - "@github.commit.state.calculator"
+      - "@doctrine.orm.entity_manager"
 
   github.event.status.data.repo.factory:
     class: DevBoard\GithubEvent\Status\Data\RepoFactory
