--- a/src/DevBoard/GithubBundle/Resources/config/services/remote.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/remote.yml
@@ -12,11 +12,11 @@ services:
   github.remote.fetch.branch.handler:
     class: DevBoard\GithubRemote\Fetch\Branch\BranchHandler
     arguments:
-      - @github.remote.fetch.branch.data.branch.factory
-      - @github.remote.fetch.branch.data.commit.factory
-      - @github.remote.fetch.branch.data.commit_author.factory
-      - @github.remote.fetch.branch.data.commit_committer.factory
-      - @github.branch.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
+      - "@github.remote.fetch.branch.data.branch.factory"
+      - "@github.remote.fetch.branch.data.commit.factory"
+      - "@github.remote.fetch.branch.data.commit_author.factory"
+      - "@github.remote.fetch.branch.data.commit_committer.factory"
+      - "@github.branch.facade"
+      - "@github.commit.facade"
+      - "@github.user.facade"
+      - "@doctrine.orm.entity_manager"
