--- a/src/DevBoard/GithubBundle/Resources/config/services/repo.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/repo.yml
@@ -9,7 +9,7 @@ services:
   github.repo.factory:
     class: DevBoard\Github\Repo\Entity\GithubRepoFactory
     arguments:
-      - @github.repo.mapper.remote_to_entity
+      - "@github.repo.mapper.remote_to_entity"
 
   github.repo.mapper.remote_to_entity:
     class: DevBoard\Github\Repo\Mapper\RemoteToEntityMapper
@@ -17,14 +17,14 @@ services:
   github.repo.facade:
     class: DevBoard\Github\Repo\GithubRepoFacade
     arguments:
-      - @github.repo.repository
-      - @github.repo.factory
-      - @doctrine.orm.entity_manager
+      - "@github.repo.repository"
+      - "@github.repo.factory"
+      - "@doctrine.orm.entity_manager"
 
   github.repo.service:
     class: DevBoard\Github\Repo\GithubRepoService
     arguments:
-      - @github.repo.factory
-      - @null_dev_github_api.repo.service
-      - @github.repo.mapper.remote_to_entity
-      - @doctrine.orm.entity_manager
+      - "@github.repo.factory"
+      - "@null_dev_github_api.repo.service"
+      - "@github.repo.mapper.remote_to_entity"
+      - "@doctrine.orm.entity_manager"
