--- a/src/DevBoard/GithubBundle/Resources/config/services/sync.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/sync.yml
@@ -3,7 +3,7 @@ services:
   github.sync.branches.handler:
     class: DevBoard\Github\Sync\Branches\SyncBranchesHandler
     arguments:
-      - @nulldev.user.service.current
-      - @null_dev_github_api.branch.service
-      - @github.remote.fetch.branch.handler
+      - "@nulldev.user.service.current"
+      - "@null_dev_github_api.branch.service"
+      - "@github.remote.fetch.branch.handler"
 
