--- a/src/NullDev/GithubApiBundle/Resources/config/services/api/branch.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services/api/branch.yml
@@ -6,5 +6,5 @@ services:
   null_dev_github_api.branch.service:
     class: NullDev\GithubApi\Branch\RemoteGithubBranchService
     arguments:
-      - @null_dev_github_api.client.authenticated.factory.token
-      - @null_dev_github_api.branch.data.factory
+      - "@null_dev_github_api.client.authenticated.factory.token"
+      - "@null_dev_github_api.branch.data.factory"
