--- a/src/NullDev/GithubApiBundle/Resources/config/services/api/repo.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services/api/repo.yml
@@ -6,5 +6,5 @@ services:
   null_dev_github_api.repo.service:
     class: NullDev\GithubApi\Repo\RemoteGithubRepoService
     arguments:
-      - @null_dev_github_api.client.authenticated.factory.token
-      - @null_dev_github_api.repo.data.factory
+      - "@null_dev_github_api.client.authenticated.factory.token"
+      - "@null_dev_github_api.repo.data.factory"
