--- a/src/NullDev/GithubApiBundle/Resources/config/services/api/tag.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services/api/tag.yml
@@ -5,5 +5,5 @@ services:
   null_dev_github_api.tag.service:
     class: NullDev\GithubApi\Tag\RemoteGithubTagService
     arguments:
-      - @null_dev_github_api.client.authenticated.factory.token
-      - @null_dev_github_api.tag.data.factory
+      - "@null_dev_github_api.client.authenticated.factory.token"
+      - "@null_dev_github_api.tag.data.factory"
