--- a/src/DevBoard/GithubBundle/Resources/config/services/event/main.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/event/main.yml
@@ -8,7 +8,7 @@ services:
   github.event.handler:
     class: DevBoard\GithubEvent\EventHandler
     arguments:
-      - @github.event.payload.factory
-      - @github.event.push.handler
-      - @github.event.status.handler
-      - @github.event.pull_request.handler
+      - "@github.event.payload.factory"
+      - "@github.event.push.handler"
+      - "@github.event.status.handler"
+      - "@github.event.pull_request.handler"
