--- a/src/DevBoard/GithubBundle/Resources/config/services/event/push.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/event/push.yml
@@ -3,8 +3,8 @@ services:
   github.event.push.handler:
     class: DevBoard\GithubEvent\Push\PushHandler
     arguments:
-      - @github.event.push.branch.handler
-      - @github.event.push.tag.handler
+      - "@github.event.push.branch.handler"
+      - "@github.event.push.tag.handler"
 
   github.event.push.branch.data.repo.factory:
     class: DevBoard\GithubEvent\Push\Branch\Data\RepoFactory
@@ -24,16 +24,16 @@ services:
   github.event.push.branch.handler:
     class: DevBoard\GithubEvent\Push\Branch\BranchHandler
     arguments:
-      - @github.event.push.branch.data.repo.factory
-      - @github.event.push.branch.data.branch.factory
-      - @github.event.push.branch.data.commit.factory
-      - @github.event.push.branch.data.commit_author.factory
-      - @github.event.push.branch.data.commit_committer.factory
-      - @github.repo.facade
-      - @github.branch.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
+      - "@github.event.push.branch.data.repo.factory"
+      - "@github.event.push.branch.data.branch.factory"
+      - "@github.event.push.branch.data.commit.factory"
+      - "@github.event.push.branch.data.commit_author.factory"
+      - "@github.event.push.branch.data.commit_committer.factory"
+      - "@github.repo.facade"
+      - "@github.branch.facade"
+      - "@github.commit.facade"
+      - "@github.user.facade"
+      - "@doctrine.orm.entity_manager"
 
   github.event.push.tag.data.repo.factory:
     class: DevBoard\GithubEvent\Push\Tag\Data\RepoFactory
@@ -53,19 +53,19 @@ services:
   github.event.push.tag.handler:
     class: DevBoard\GithubEvent\Push\Tag\TagHandler
     arguments:
-      - @github.event.push.tag.data.repo.factory
-      - @github.event.push.tag.data.tag.factory
-      - @github.event.push.tag.data.commit.factory
-      - @github.event.push.tag.data.commit_author.factory
-      - @github.event.push.tag.data.commit_committer.factory
-      - @github.repo.facade
-      - @github.tag.facade
-      - @github.commit.facade
-      - @github.user.facade
-      - @doctrine.orm.entity_manager
+      - "@github.event.push.tag.data.repo.factory"
+      - "@github.event.push.tag.data.tag.factory"
+      - "@github.event.push.tag.data.commit.factory"
+      - "@github.event.push.tag.data.commit_author.factory"
+      - "@github.event.push.tag.data.commit_committer.factory"
+      - "@github.repo.facade"
+      - "@github.tag.facade"
+      - "@github.commit.facade"
+      - "@github.user.facade"
+      - "@doctrine.orm.entity_manager"
 
   github.event.push.handler:
     class: DevBoard\GithubEvent\Push\PushHandler
     arguments:
-      - @github.event.push.branch.handler
-      - @github.event.push.tag.handler
+      - "@github.event.push.branch.handler"
+      - "@github.event.push.tag.handler"
