--- a/src/DevBoard/GithubBundle/Resources/config/services/pull_request.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/pull_request.yml
@@ -9,7 +9,7 @@ services:
   github.pull_request.factory:
     class: DevBoard\Github\PullRequest\Entity\GithubPullRequestFactory
     arguments:
-      - @github.pull_request.mapper.remote_to_entity
+      - "@github.pull_request.mapper.remote_to_entity"
 
   github.pull_request.mapper.remote_to_entity:
     class: DevBoard\Github\PullRequest\Mapper\RemoteToEntityMapper
@@ -17,6 +17,6 @@ services:
   github.pull_request.facade:
     class: DevBoard\Github\PullRequest\GithubPullRequestFacade
     arguments:
-      - @github.pull_request.repository
-      - @github.pull_request.factory
-      - @doctrine.orm.entity_manager
+      - "@github.pull_request.repository"
+      - "@github.pull_request.factory"
+      - "@doctrine.orm.entity_manager"
