--- a/src/NullDev/GithubApiBundle/Resources/config/services/api/pull_request.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services/api/pull_request.yml
@@ -5,5 +5,5 @@ services:
   null_dev_github_api.pull_request.service:
     class: NullDev\GithubApi\PullRequest\RemoteGithubPullRequestService
     arguments:
-      - @null_dev_github_api.client.authenticated.factory.token
-      - @null_dev_github_api.pull_request.data.factory
+      - "@null_dev_github_api.client.authenticated.factory.token"
+      - "@null_dev_github_api.pull_request.data.factory"
