--- a/src/NullDev/UserBundle/Resources/config/services.yml
+++ b/src/NullDev/UserBundle/Resources/config/services.yml
@@ -5,9 +5,9 @@ services:
     my_user_provider:
         class: NullDev\UserBundle\Security\Core\User\FOSUBUserProvider
         #this is the place where the properties are passed to the UserProvider - see config.yml
-        arguments: [@fos_user.user_manager,{github: githubId}]
+        arguments: ["@fos_user.user_manager",{github: githubId}]
 
     nulldev.user.service.current:
         class: NullDev\UserBundle\Service\CurrentUserService
         arguments:
-            - @security.token_storage
+            - "@security.token_storage"
