--- a/src/DevBoard/GithubBundle/Resources/config/services/repo.yml
+++ b/src/DevBoard/GithubBundle/Resources/config/services/repo.yml
@@ -1,8 +1,7 @@
 services:
   github.repo.repository:
     class: Doctrine\ORM\EntityRepository
-    factory_service: doctrine.orm.default_entity_manager
-    factory_method: getRepository
+    factory: ["@doctrine.orm.default_entity_manager", getRepository]
     arguments:
       - DevBoard\Github\Repo\Entity\GithubRepo
 
