--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -25,7 +25,7 @@ swiftmailer:
     disable_delivery: true
 hwi_oauth:
     # name of the firewall in which this bundle is active, this setting MUST be set
-    firewall_name: main
+    firewall_names: [main]
     resource_owners:
         github:
             type:                github
