Fixing/removing Doctrine entity associations. Closes #189

--- a/src/DevBoard/Core/Project/Resources/config/doctrine/Project.orm.yml
+++ b/src/DevBoard/Core/Project/Resources/config/doctrine/Project.orm.yml
@@ -28,7 +28,7 @@ DevBoard\Core\Project\Entity\Project:
   manyToMany:
     githubRepos:
       targetEntity: DevBoard\Github\Repo\Entity\GithubRepo
-      inversedBy: repos
+      inversedBy: projects
       joinTable:
         name: ProjectGithubRepos
   lifecycleCallbacks:
