Added rmiller behat extension

--- a/behat.yml
+++ b/behat.yml
@@ -106,3 +106,4 @@ default:
                 capabilities:
                     version: ''
         Behat\Symfony2Extension: ~
+        RMiller\BehatSpec\BehatExtension: ~
